--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,7 @@ body {
 }
 #header-nav {
 	background-color: #B5B610;
+	text-align: center;
 }
 
 
@@ -46,23 +47,23 @@ body {
 }
 
 #phonenumber {
-	font-size: 30px;
+	font-size: 20px;
 	color: #ffffff;
 	display: block;
 	text-align: center;
 }
 
-#callbutton {
-	font-size: 1.5em;
-    display: block;
-    margin: 0 175px;
+#callbutton > a {
+	font-size: 20px;
+    
     padding: 10px;
-    border: 2px solid #fff;
+    /*border: 2px solid #fff;*/
     background-color: #2D582B;
     color: #fff;
     margin-bottom: 20px;
-    text-align: center;
     text-decoration: none;
+   
+    
 }
 a:hover {
 	text-decoration: none;
@@ -78,8 +79,9 @@ a:hover {
 #facebook {
 	font-size: 40px;
 	text-align: center;
-	display: block;
+	
 }
+
 
 
 .navbar-nav>li
