--- a/css/styles.css
+++ b/css/styles.css
@@ -82,8 +82,6 @@ a:hover {
 	
 }
 
-
-
 .navbar-nav>li
 {
 	float: right;
@@ -132,3 +130,29 @@ a:hover {
 }*/
 
 /*End of Navigation Bar*/
+
+/*Beginning of Jumbotron*/
+/*Beginning of Image Gallery*/
+
+#slideshowimages {
+	/*width: auto;*/
+	max-height: 450px;
+	text-align: center;
+	display: block;
+	left: 0;
+	right: 0;
+
+}
+
+.img-responsive {
+	width: 100%;
+	margin-top: 20px;
+}
+
+/*End of Image Gallery*/
+
+#about {
+	text-align: center;
+	font-size: 20px;
+}
+/*End of Jumbotron*/
